--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "eslint-config-airbnb-base": "^14.2.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "multer": "^1.4.2",
@@ -21,6 +22,15 @@
     "@types/express": "^4.17.8",
     "@types/multer": "^1.4.4",
     "@types/yup": "^0.29.9",
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
+    "@typescript-eslint/parser": "^4.7.0",
+    "eslint": "5.16.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-promise": "4.2.1",
+    "prettier": "^2.0.5",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.5"
   }
